Add author information ☃

--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,9 @@
           Также это можно сделать из пунктa "Mонитор" главного меню.
         </p>
       </article>
+      <div class="links">
+        <a href="#">GitHub</a>
+      </div>
     </section>
   </main>
 
